Fix component sizing and alignment&created props for using the components

--- a/chatapplication/src/components/button.css
+++ b/chatapplication/src/components/button.css
@@ -1,13 +1,6 @@
 @import "palette.css";
 
-.default-button-div {
-    position: fixed;
-    /*margin-left: 550px; /*move button to the right so that it doesn't cover existing components*/
-}
-
 .btn {
-    position: fixed;
-    position: absolute;
     border-radius: 8px;
     /*font-family: "Roboto";*/
     font-style: normal;
